# double-pendulum

./: .clang-format  CMakeLists.txt  README.md
src/: RungeKutta.cpp  RungeKutta.h  const.h  main.cpp
